--- a/styles.css
+++ b/styles.css
@@ -142,3 +142,18 @@ footer {
     margin: 0 10px;
     font-size: 20px;
 }
+
+/**
+ __  __              _ _  __    _       _          
+ \ \/ / _______  ___| | |/ /___| |_ ___| |__   ___ 
+  \  / |_  / _ \/ _ \ | ' // _ \ __/ __| '_ \ / _ \
+  /  \  / /  __/  __/ | . \  __/ || (__| | | |  __/
+ /_/\_\/___\___|\___|_|_|\_\___|\__\___|_| |_|\___|
+ * @INFO
+ * Source code by | XzeelKetche
+ * @INFO
+ * Source code ID | Esplas-Website
+ * @INFO
+ * Perhatian      | Credit & watermark jangan pernah di hapus!
+ * @INFO
+*/
